<resources>
    <string name="app_name">Schedule SHSPU</string>

    <!-- Bottom Navigation -->
    <string name="search">Search</string>
    <string name="main">Main</string>
    <string name="favorite">Favorites</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>

    <!-- Main Screen -->
    <string name="groups">Groups</string>
    <string name="teachers">Teachers</string>
    <string name="find">Find</string>
    <string name="open_search">open search</string>
    <string name="selectchip">Choose group or teacher</string>
    <string name="groups_header">Groups</string>
    <string name="teachers_header">Teachers</string>
    <string name="others_header">Others</string>

    <!-- Schedule -->
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="Wednesday">Wed</string>
    <string name="Thursday">Thu</string>
    <string name="Friday">Fri</string>
    <string name="Saturday">Sat</string>
    <string name="no_class">No classes</string>
    <string name="schedule_change_title">Schedule Update</string>
    <string name="schedule_change_message">Changes detected in schedule for %1$s %2$s</string>
    <string name="group_type">group</string>
    <string name="teacher_type">teacher</string>

    <!-- Errors -->
    <string name="error_schedule">Failed to load schedule :(</string>
    <string name="error_saved">Failed to load favorites :(</string>
    <string name="error_search">Failed to load groups/teachers :(</string>
    <string name="group_not_found">Group not found</string>
    <string name="teacher_not_found">Teacher not found</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_api_connection">No API connection</string>
    <string name="internet_status">Internet connection status</string>
    <string name="schedule_not_available">schedule not available</string>


</resources>