<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_group"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            app:icon="@drawable/baseline_school_24"
            app:iconTint="#9E9E9E"
            app:iconSize="24dp"
            app:iconGravity="textTop"
            android:text="@string/groups"
            android:textColor="#9E9E9E"
            android:textSize="12sp"
            app:strokeColor="@color/green_light" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_teacher"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            app:icon="@drawable/baseline_person_24"
            app:iconTint="#9E9E9E"
            app:iconSize="24dp"
            app:iconGravity="textTop"
            android:text="@string/teachers"
            android:textColor="#9E9E9E"
            android:textSize="12sp"
            app:strokeColor="@color/green_light"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/search"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="16dp">

        <EditText
            android:id="@+id/search_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:imeOptions="actionSearch"
            android:inputType="text" />


    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/free_search_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/open_search"
        android:textColor="#3A3A3A"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/search_container"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:backgroundTint="@color/green_light"
        android:visibility="gone"
        app:cornerRadius="8dp"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/free_search_checkbox" />

    <ListView
        android:id="@+id/search_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:divider="@null"
        android:dividerHeight="8dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_button" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="match_parent"
        android:text=""
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        android:textColor="#3A3A3A"
        android:textSize="16sp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>