<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/top_nav"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/green_dark"
            android:padding="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">




        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:id="@+id/main_cont"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bot_nav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_nav"
            app:layout_constraintVertical_bias="0.0">

        </FrameLayout>

        <FrameLayout
            android:id="@+id/internetStatusIcon"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/gray"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/main_cont"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="start"
                android:background="@color/light_gray"/>
            <TextView
                android:id="@+id/error_text_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/no_internet_connection"/>
        </FrameLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/bot_nav"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/green_dark"
            android:padding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:contentInsetStart="0dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnSaved"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/favorite"
                    android:src="@drawable/baseline_star_24_selected"
                    android:scaleType="centerInside"
                    android:background="@drawable/button_state_selector"
                    android:clickable="true"
                    android:focusable="true"/>

                <ImageView
                    android:id="@+id/btnSearch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/search"
                    android:src="@drawable/baseline_search_24"
                    android:scaleType="centerInside"
                    android:background="@drawable/button_state_selector"
                    android:clickable="true"
                    android:focusable="true"/>


            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>